# parallel_robot_pc

./: .gitignore  references.txt
exp_data/exp_01_02_2021-10_29_52/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt  x_mocap.txt
exp_data/exp_01_02_2021-11_34_47/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt  x_mocap.txt
exp_data/exp_01_02_2021-12_29_00/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt  x_mocap.txt
exp_data/exp_01_02_2021-13_15_55/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt  x_mocap.txt
exp_data/exp_02_03_2021-13_33_50/: ang_ots.txt
exp_data/exp_02_03_2021-14_51_16/: ang_ots.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  vc_des.txt
exp_data/exp_02_03_2021-16_39_11/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  vc_des.txt  x_coord.txt
exp_data/exp_03_03_2021-13_01_33/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_03_03_2021-13_29_46/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_03_03_2021-16_09_42/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_03_03_2021-16_36_51/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_03_03_2021-17_03_19/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_05_02_2021-11_59_51/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt
exp_data/exp_05_02_2021-12_34_02/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt
exp_data/exp_07_04_2021-12_05_30/: control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt
exp_data/exp_07_04_2021-12_10_03/: control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt
exp_data/exp_07_04_2021-13_00_59/: control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt
exp_data/exp_08_04_2021-10_43_08/: control_action.txt  joint_position.txt  joint_velocity.txt
exp_data/exp_09_02_2021-17_57_42/: control_action.txt  joint_position.txt  joint_velocity.txt  q_grav.txt  ref_pose.txt  x_coord.txt  x_mocap.txt
exp_data/exp_11_03_2021-16_47_41/: ang_ots.txt  control_action.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_11_03_2021-17_56_11/: ang_ots.txt  control_action.txt  jac_det.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_15_03_2021-11_48_07/: ang_ots.txt  control_action.txt  jac_det.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_15_03_2021-11_58_26/: ang_ots.txt  control_action.txt  jac_det.txt  joint_position.txt  joint_velocity.txt  ref_pose.txt  ref_pose_mod.txt  vc_des.txt  x_coord.txt  x_mocap.txt
exp_data/exp_15_03_2021-12_58_08/: ang_ots.txt  control_action.txt  (+8 more)
src/pr_3dof_storage/: CMakeLists.txt  package.xml
src/pr_3dof_storage/include/pr_3dof_storage/: long_array_recorder.hpp  single_recorder.hpp
src/pr_3dof_storage/launch/: recorder.launch.py
src/pr_3dof_storage/src/: long_array_recorder.cpp  single_recorder.cpp
src/pr_storage/: CMakeLists.txt  package.xml
src/pr_storage/include/pr_storage/: mocap_recorder.hpp  number_recorder.hpp  ots_recorder.hpp  single_recorder.hpp
src/pr_storage/launch/: pr_gus_recorder.launch.py  recorder.launch.py
src/pr_storage/src/: mocap_recorder.cpp  number_recorder.cpp  ots_recorder.cpp  single_recorder.cpp
(+312 files in other folders)
